# ninjapivot

./: .gitignore  LICENSE.txt  README.md  package-lock.json
backend/: api_server.py  pyproject.toml  setup.py
backend/cache/52cc7588-d3df-4216-98ac-1656be421a39/: main.fdb_latexmk  main.fls  main.tex
backend/cache/747b46d3-a56d-40a8-9243-86953526cf16/: main.fdb_latexmk  main.fls  main.tex
backend/cache/74e12d88-f61e-4910-8476-26c99870b984/: main.fdb_latexmk  main.fls  main.tex
backend/cache/80d63210-a3da-49e9-b341-47b51a815848/: main.fdb_latexmk  main.fls  main.tex
backend/cache/8b6a1949-c0f7-4e2f-8126-d34e0cc45179/: main.fdb_latexmk  main.fls  main.tex
backend/cache/a4ef9a99-88df-4d8c-81a6-88bf44bc63b2/: main.fdb_latexmk  main.fls  main.tex
backend/cache/aaedd874-2996-48f9-8e38-2012860c6c9c/: main.fdb_latexmk  main.fls  main.tex
backend/cache/ac067834-44ec-4af8-a64c-a6c5a71a2b13/: main.fdb_latexmk  main.fls  main.tex
backend/cache/b975a6b3-34dd-4ff1-b33c-ba214346a31d/: main.fdb_latexmk  main.fls  main.tex
backend/cache/bd9a1dc1-a445-428b-a143-ea077c8b6be5/: main.fdb_latexmk  main.fls  main.tex
backend/cache/fcdd38da-9d22-475c-ba42-4ada7f838b1e/: main.fdb_latexmk  main.fls  main.tex
backend/ninjapivot/: __init__.py
backend/tests/: test_R.py  test_pipeline.py  test_rpy2.py
docs/: Rsetup.md
frontend/: dashboard.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  MenuBar.jsx  ProgressSSE.jsx  dashboard.jsx  index.css
frontend/src/pages/: Dashboard.jsx
