[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ninjapivot"
version = "1.0.0"
description = "automated data analysis and visualization"
requires-python = ">=3.6"
license = {text = "MIT License"}
authors = [
  { email = "info@softwarespaghetti.com" }
]
urls = { "Homepage" = "https://github.com/spaghetti-software-inc/dxdy" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "uvicorn",
  "fastapi",
  "beautifulsoup4",
  "tomlkit",
  "duckdb",
  "ntplib",
  "pandas",
  "matplotlib",
  "scipy",
  "pyarrow",
  "fastparquet",
  "openai",
  "pydantic",
  "tabulate",
  "rich",
  "textual",
  "loguru",
  "pyzmq",
  "html5lib",
  "pyquery",
  "plotext",
  "textual-plotext",
  "tiktoken",
  "blp",
  "pandas-market-calendars",
  "keyring",
  "yfinance",
  "QuantLib",
]

#[tool.setuptools]
# Specify package directories similar to package_dir in setup.py.
#package-dir = { "ninjapivot" = "ninjapivot" }

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
include = ["ninjapivot", "ninjapivot.*"]

#[tool.setuptools.packages.find]
# This mirrors find_packages(where="ninjapivot")
#where = ["ninjapivot"]
